--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-ccxt
-pandas
-pandas_ta
-requests
-flask
+flask==2.2.5
+ccxt==4.1.78
+pandas==1.5.3
+pandas_ta==0.3.14b
+numpy==1.24.4
+requests==2.31.0
